# Projects

./: README.md
Bank_System/: BankSystem.md  CMakeLists.txt  DatabaseFile.txt  Makefile
Bank_System/application/: CMakeLists.txt  main.cpp
Bank_System/source/: CMakeLists.txt
Bank_System/source/Bank/: Bank.cpp  Bank.h  CMakeLists.txt
Bank_System/source/Bank/MainMenu/: CMakeLists.txt  Greeting.h  MainMenu.h  UserInput.h
Bank_System/source/Customer/: BlockedCustomers.cpp  BlockedCustomers.h  CMakeLists.txt  Customer.cpp  Customer.h  CustomerInput.h  CustomerMenu.h  CustomerOperations.h
Bank_System/source/Database/: CMakeLists.txt  Database.cpp  Database.h  DatabaseException.h
Bank_System/source/GlobalsAndOperations/: BankOperations.h  CMakeLists.txt  Globals.h
Bank_System/source/Manager/: CMakeLists.txt  Manager.cpp  Manager.h  ManagerInput.h  ManagerMenu.h
Bank_System/source/TextOutput/: CMakeLists.txt  Colors.h  OutputFormat.h
FullBankSystem/: .gitignore  BankSystem.md  CMakeLists.txt  Main.qml  Test.cpp  main.cpp
FullBankSystem/Database/: CMakeLists.txt  database.cpp  database.h  databaseOperations.cpp  databaseOperations.h  queryType.cpp  queryType.h
FullBankSystem/Exceptions/: CMakeLists.txt  DatabaseConnectionError.h  queryError.h
FullBankSystem/GUI/: CMakeLists.txt
FullBankSystem/GUI/MainMenu/: CMakeLists.txt  MainButton.qml  MainMenu.qml
FullBankSystem/GUI/ManagerMenu/: AllCustomersList.qml  CMakeLists.txt  CustomersList.qml  ManagerMainMenu.qml  ManagerMenu.qml  MenuButton.qml
FullBankSystem/Tests/: CMakeLists.txt  databaseOperationsTest.cpp  databaseOperationsTest.h  databaseTest.cpp  databaseTest.h
Full_Bank_System/: CMakeLists.txt  Main.qml  README.md  test.cpp
Full_Bank_System/Database/: database.cpp  database.h  databaseOperations.cpp  databaseOperations.h
Full_Bank_System/GUI/: CMakeLists.txt
Full_Bank_System/GUI/ManagerMenu/: AddCustomer.qml  CMakeLists.txt  CustomTextInput.qml  CustomersList.qml  CustomersListTemplate.qml  ManagerMainMenu.qml  ManagerMenu.qml
Full_Bank_System/Tests/: Databasetest.h  databaseOperationsTest.h  queryTypeTest.cpp  queryTypeTest.h
